[package]
name = "simplews"
version = "0.0.14"
edition = "2021"
authors = ["Dario Caruso"]
description = "simple crate to use websockets"
license = "Apache-2.0"
documentation = "https://docs.rs/simplews"
repository = "https://github.com/dottgonzo/rust-simplews"


[dependencies]
anyhow = { version = "1.0.75" }
futures-util = { version = "0.3.29", default-features = false }
kanal = { version = "0.1.0-pre8" }
rustls = { version = "0.21.8", default-features = false, features = [
    "dangerous_configuration",
    "secret_extraction",
] }
rustls-pemfile =  { version = "1.0.3", default-features = false }
tokio = { version = "1.33.0", default-features = false, features = ["macros","rt-multi-thread","time"] }
tokio-tungstenite = { version = "0.20.1", features = [
    "rustls",
    "rustls-native-certs",
    "rustls-tls-native-roots",
    "tokio-rustls",
    "webpki-roots",
] }
url = { version = "2.4.1", default-features = false }
