[package]
name = "simplews"
version = "0.1.2"
edition = "2021"
authors = ["Dario Caruso"]
description = "simple crate to use websockets"
license = "Apache-2.0"
documentation = "https://docs.rs/simplews"
repository = "https://github.com/dottgonzo/rust-simplews"


[features]
tls = ["dep:rustls","dep:rustls-pemfile","tokio-tungstenite/rustls","tokio-tungstenite/rustls-tls-native-roots","tokio-tungstenite/tokio-rustls"]

default = ["tls"]

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
futures-util = { version = "0.3.30", default-features = false }
kanal = { version = "0.1.0-pre8", default-features = false, features = ["async"] }
rustls = { version = "0.23.9", default-features = false, features = ["std"], optional = true }
rustls-pemfile =  { version = "2.1.2", default-features = false, optional = true }
tokio = { version = "1.38.0", default-features = false, features = ["macros","rt-multi-thread","time"] }
tokio-tungstenite = { version = "0.22.0", default-features = false, features = [
    "connect"
] }
url = { version = "2.5.1", default-features = false }
